@@ -25,12 +25,12 @@
 #include <assert.h>
 
 #include <zbar.h>
-#include "decoder.h"
 
 #ifdef DEBUG_QR_FINDER
 # define DEBUG_LEVEL (DEBUG_QR_FINDER)
 #endif
 #include "debug.h"
+#include "decoder.h"
 
 /* at this point lengths are all decode unit offsets from the decode edge
  * NB owned by finder
